--- a/src/components/Pages/ContactMe/EmailForm/EmailForm.css
+++ b/src/components/Pages/ContactMe/EmailForm/EmailForm.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     background-color: var(--white);
-    margin-top: 80px;
+    margin-top: 60px;
   }
   
   .email-form {
